--- a/index.html
+++ b/index.html
@@ -3,9 +3,14 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>La météo du Croisic</title>
+    <title>Météo Le Croisic</title>
 </head>
 <body>
     <h1>Bienvenue sur le site référence de la météo au Croisic !</h1>
+    <style>
+        .center-text {
+            text-align: center;
+        }
+    </style>
 </body>
 </html>
