Test modif titre

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>Météo Le Croisic</title>
 </head>
 <body>
-    <h1>Bienvenue sur le site référence de la météo au Croisic !</h1>
+    <h1>Bienvenue sur le site référence de la météo au Croisic</h1>
     <style>
         .center-text {
             text-align: center;
