Couleur bleu titre

--- a/index.html
+++ b/index.html
@@ -5,10 +5,16 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Météo au Croisic</title>
     <style>
-        /* Style pour centrer le titre */
-        h1 {
+        /* Style pour la section du titre */
+        header {
+            background-color: hsl(223, 82%, 47%); /* Bleu ciel */
+            padding: 20px;
             text-align: center;
-            margin-top: 20px;
+        }
+
+        h1 {
+            margin: 0;
+            color: #fff; /* Couleur du texte en blanc pour contraster avec le fond */
         }
 
         /* Style pour le menu horizontal */
@@ -33,7 +39,9 @@
 </head>
 <body>
 
-    <h1>Météo au Croisic</h1>
+    <header>
+        <h1>Météo au Croisic</h1>
+    </header>
 
     <nav>
         <a href="#radar">Radar des pluies</a>
