Agrandissement titre + menu

--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
         h1 {
             margin: 0;
             color: #fff; /* Couleur du texte en blanc pour contraster avec le fond */
+            font-size: 48px; /* Taille de police plus grande */
         }
 
         /* Style pour le menu horizontal */
@@ -30,6 +31,7 @@
             text-decoration: none;
             color: #333;
             font-weight: bold;
+            font-size: 24px; /* Taille de police plus grande */
         }
 
         nav a:hover {
