Mise à jour page d'accueil pour redirection vers station météo

--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
 
     <nav>
         <a href="#radar">Radar des pluies</a>
-        <a href="#station">Station météo</a>
+        <a href="station.html">Station météo</a>
         <a href="#webcam">Webcam</a>
     </nav>
 
