--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <style>
         /* Style pour la section du titre */
         header {
-            background-color: hsl(223, 82%, 47%); /* Bleu ciel */
+            background-color: hsl(223, 82%, 47%);
             padding: 20px;
             text-align: center;
         }
@@ -16,6 +16,7 @@
             margin: 0;
             color: #fff; /* Couleur du texte en blanc pour contraster avec le fond */
             font-size: 48px; /* Taille de police plus grande */
+            font-family: Arial, sans-serif;
         }
 
         /* Style pour le menu horizontal */
