--- a/station.html
+++ b/station.html
@@ -9,7 +9,7 @@
             font-family: Arial, sans-serif;
         }
         header {
-            background-color: #87CEEB; /* Bleu ciel */
+            background-color: hsl(223, 82%, 47%);
             padding: 20px;
             text-align: center;
         }
@@ -50,7 +50,6 @@
 
     <main>
         <h2>Bienvenue à la Station Météo !</h2>
-        <p>Ici, vous trouverez toutes les informations relatives à la météo au Croisic.</p>
     </main>
 
 </body>
