--- a/index.html
+++ b/index.html
@@ -33,6 +33,7 @@
             color: #333;
             font-weight: bold;
             font-size: 24px; /* Taille de police plus grande */
+            font-family: Arial, sans-serif;
         }
 
         nav a:hover {
