fixation du menu + retour page d'accueil

--- a/station.html
+++ b/station.html
@@ -39,13 +39,16 @@
 <body>
 
     <header>
-        <h1>Station Météo</h1>
+        <a href="index.html">
+            <h1>Météo au Croisic</h1>
+        </a>
     </header>
+    
 
     <nav>
-        <a href="index.html">Météo au Croisic</a>
+        <a href="#radar">Radar des pluies</a>
         <a href="station.html">Station météo</a>
-        <a href="webcam.html">Webcam</a>
+        <a href="#webcam">Webcam</a>
     </nav>
 
     <main>
