--- a/station.html
+++ b/station.html
@@ -39,9 +39,7 @@
 <body>
 
     <header>
-        <a href="index.html">
-            <h1>Météo au Croisic</h1>
-        </a>
+        <a href="index.html">Météo au Croisic</a>
     </header>
     
 
