--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
             background-color: hsl(223, 82%, 47%);
             padding: 20px;
             text-align: center;
+            text-decoration: none;
         }
 
         h1 {
