suppression du soulignement du lien

--- a/station.html
+++ b/station.html
@@ -10,7 +10,11 @@
             background-color: hsl(223, 82%, 47%);
             padding: 20px;
             text-align: center;
-            text-decoration: none;
+        }
+
+        /* Style pour les liens */
+        header a {
+            text-decoration: none; /* Supprime le soulignement */
         }
 
         h1 {
