harmonisation du style entre les pages

--- a/index.html
+++ b/index.html
@@ -10,7 +10,11 @@
             background-color: hsl(223, 82%, 47%);
             padding: 20px;
             text-align: center;
-            text-decoration: none;
+        }
+
+        /* Style pour les liens */
+        header a {
+            text-decoration: none; /* Supprime le soulignement */
         }
 
         h1 {
@@ -18,6 +22,7 @@
             color: #fff; /* Couleur du texte en blanc pour contraster avec le fond */
             font-size: 48px; /* Taille de police plus grande */
             font-family: Arial, sans-serif;
+            text-decoration: none;
         }
 
         /* Style pour le menu horizontal */
