lien vers l'accueil dans l'accueil

--- a/index.html
+++ b/index.html
@@ -50,7 +50,9 @@
 <body>
 
     <header>
-        <h1>Météo au Croisic</h1>
+        <a href="index.html">
+            <h1>Météo au Croisic</h1>
+        </a>
     </header>
 
     <nav>
