création fichier css

--- a/station.html
+++ b/station.html
@@ -4,48 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Station Météo - Météo au Croisic</title>
-    <style>
-        /* Style pour la section du titre */
-        header {
-            background-color: hsl(223, 82%, 47%);
-            padding: 20px;
-            text-align: center;
-        }
-
-        /* Style pour les liens */
-        header a {
-            text-decoration: none; /* Supprime le soulignement */
-        }
-
-        h1 {
-            margin: 0;
-            color: #fff; /* Couleur du texte en blanc pour contraster avec le fond */
-            font-size: 48px; /* Taille de police plus grande */
-            font-family: Arial, sans-serif;
-            text-decoration: none;
-        }
-
-        /* Style pour le menu horizontal */
-        nav {
-            display: flex;
-            justify-content: center; /* Centrer le menu horizontalement */
-            background-color: #f0f0f0;
-            padding: 10px;
-        }
-
-        nav a {
-            margin: 0 15px; /* Espacement entre les liens */
-            text-decoration: none;
-            color: #333;
-            font-weight: bold;
-            font-size: 24px; /* Taille de police plus grande */
-            font-family: Arial, sans-serif;
-        }
-
-        nav a:hover {
-            color: #007BFF; /* Couleur au survol */
-        }
-    </style>
+    <link rel="stylesheet" href="styles.css"> <!-- Lien vers le fichier CSS -->
 </head>
 <body>
 
