--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
     </header>
 
     <nav>
+        <a href="previsions.html">Prévisions</a>
         <a href="#radar">Radar des pluies</a>
         <a href="station.html">Station météo</a>
         <a href="#webcam">Webcam</a>
