--- a/previsions.html
+++ b/previsions.html
@@ -5,8 +5,19 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Prévisions - Météo au Croisic</title>
     <link rel="stylesheet" href="styles.css"> <!-- Lien vers le fichier CSS -->
+    <script>
+        // Fonction pour charger le menu
+        function loadMenu() {
+            fetch('menu.html')
+                .then(response => response.text())
+                .then(data => {
+                    document.getElementById('menu-container').innerHTML = data;
+                })
+                .catch(error => console.error('Erreur de chargement du menu:', error));
+        }
+    </script>
 </head>
-<body>
+<body onload="loadMenu()">
 
     <header>
         <a href="index.html">
@@ -14,12 +25,7 @@
         </a>
     </header>
 
-    <nav>
-        <a href="previsions.html">Prévisions</a>
-        <a href="#radar">Radar des pluies</a>
-        <a href="station.html">Station météo</a>
-        <a href="#webcam">Webcam</a>
-    </nav>
+    <div id="menu-container"></div> <!-- Conteneur pour le menu -->
 
 </body>
 </html>
