ajout température page d'accueil

--- a/index.html
+++ b/index.html
@@ -15,6 +15,36 @@
                 })
                 .catch(error => console.error('Erreur de chargement du menu:', error));
         }
+
+        // Fonction pour récupérer les données de l'API
+        async function fetchWeatherData() {
+            try {
+                const response = await fetch('https://api.openweathermap.org/data/3.0/onecall?lat=47.291688&lon=-2.520130&units=metric&exclude=minutely,hourly,daily,alerts&appid=3019a6c49cea102650053a8919b5fa54');
+                if (!response.ok) {
+                    throw new Error('Erreur de réseau : ' + response.status);
+                }
+                const data = await response.json();
+                displayWeatherData(data); // Appelle la fonction pour afficher les données
+            } catch (error) {
+                console.error('Erreur:', error);
+                document.getElementById('weather-info').innerText = 'Erreur de chargement des données.';
+            }
+        }
+
+        // Fonction pour afficher les données sur la page
+        function displayWeatherData(data) {
+            const temp = data.current.temp;
+
+            // Met à jour le DOM avec les valeurs
+            document.getElementById('weather-info').innerHTML = `
+                <h2>Données Météo au Croisic</h2>
+                <p>Température : ${temp}°C</p>
+            `;
+        }
+
+        // Appelle la fonction au chargement de la page
+        window.onload = fetchWeatherData;
+
     </script>
 </head>
 <body onload="loadMenu()">
