--- a/index.html
+++ b/index.html
@@ -17,13 +17,13 @@
         }
 
         // Fonction pour récupérer les données de l'API
-        async function fetchWeatherData() {
+        function fetchWeatherData() {
             try {
-                const response = await fetch('https://api.openweathermap.org/data/3.0/onecall?lat=47.291688&lon=-2.520130&units=metric&exclude=minutely,hourly,daily,alerts&appid=3019a6c49cea102650053a8919b5fa54');
+                const response = fetch('https://api.openweathermap.org/data/3.0/onecall?lat=47.291688&lon=-2.520130&units=metric&exclude=minutely,hourly,daily,alerts&appid=3019a6c49cea102650053a8919b5fa54');
                 if (!response.ok) {
                     throw new Error('Erreur de réseau : ' + response.status);
                 }
-                const data = await response.json();
+                const data = response.json();
                 displayWeatherData(data); // Appelle la fonction pour afficher les données
             } catch (error) {
                 console.error('Erreur:', error);
