--- a/index.html
+++ b/index.html
@@ -8,7 +8,6 @@
     <script>
         // Fonction pour charger le menu
         function loadMenu() {
-            console.log("Création du menu...");
             fetch('menu.html')
                 .then(response => response.text())
                 .then(data => {
@@ -18,14 +17,13 @@
         }
 
         // Fonction pour récupérer les données de l'API
-        function fetchWeatherData() {
-            console.log("Appel à l'API commencé");
+        async function fetchWeatherData() {
             try {
-                const response = fetch('https://api.openweathermap.org/data/3.0/onecall?lat=47.291688&lon=-2.520130&units=metric&exclude=minutely,hourly,daily,alerts&appid=3019a6c49cea102650053a8919b5fa54');
+                const response = await fetch('https://api.openweathermap.org/data/3.0/onecall?lat=47.291688&lon=-2.520130&units=metric&exclude=minutely,hourly,daily,alerts&appid=3019a6c49cea102650053a8919b5fa54');
                 if (!response.ok) {
                     throw new Error('Erreur de réseau : ' + response.status);
                 }
-                const data = response.json();
+                const data = await response.json();
                 displayWeatherData(data); // Appelle la fonction pour afficher les données
             } catch (error) {
                 console.error('Erreur:', error);
@@ -44,12 +42,15 @@
             `;
         }
 
-        // Appelle la fonction au chargement de la page
-        window.onload = fetchWeatherData;
+        // Appelle les fonctions au chargement de la page
+        window.onload = function() {
+            loadMenu();
+            fetchWeatherData();
+        };
 
     </script>
 </head>
-<body onload="loadMenu()">
+<body>
 
     <header>
         <a href="index.html">
