--- a/index.html
+++ b/index.html
@@ -3,63 +3,34 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Météo au Croisic</title>
-    <link rel="stylesheet" href="styles.css"> <!-- Lien vers le fichier CSS -->
-    <script>
-        // Fonction pour charger le menu
-        function loadMenu() {
-            fetch('menu.html')
-                .then(response => response.text())
-                .then(data => {
-                    document.getElementById('menu-container').innerHTML = data;
-                })
-                .catch(error => console.error('Erreur de chargement du menu:', error));
-        }
-
-        // Fonction pour récupérer les données de l'API
-        async function fetchWeatherData() {
-            try {
-                const response = await fetch('https://api.openweathermap.org/data/3.0/onecall?lat=47.291688&lon=-2.520130&units=metric&exclude=minutely,hourly,daily,alerts&appid=3019a6c49cea102650053a8919b5fa54');
-                if (!response.ok) {
-                    throw new Error('Erreur de réseau : ' + response.status);
-                }
-                const data = await response.json();
-                displayWeatherData(data); // Appelle la fonction pour afficher les données
-            } catch (error) {
-                console.error('Erreur:', error);
-                document.getElementById('weather-info').innerText = 'Erreur de chargement des données.';
-            }
-        }
-
-        // Fonction pour afficher les données sur la page
-        function displayWeatherData(data) {
-            const temp = data.current.temp;
-
-            // Met à jour le DOM avec les valeurs
-            document.getElementById('weather-info').innerHTML = `
-                <h2>Données Météo au Croisic</h2>
-                <p>Température : ${temp}°C</p>
-            `;
-        }
-
-        // Appelle les fonctions au chargement de la page
-        window.onload = function() {
-            loadMenu();
-            fetchWeatherData();
-        };
-
-    </script>
+    <title>Accueil - Météo Croisic</title> <!-- Le nom de la page ici change en fonction de la page -->
+    <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-
+    <!-- Bannière avec titre -->
     <header>
-        <a href="index.html">
-            <h1>Météo au Croisic</h1>
-        </a>
+        <h1>Météo au Croisic</h1>
+        <!-- Menu de navigation -->
+        <nav>
+            <ul>
+                <li><a href="previsions.html">Prévisions</a></li>
+                <li><a href="station.html">Station météo</a></li>
+                <li><a href="webcam.html">Webcam</a></li>
+                <li><a href="climat.html">Climat Croisic</a></li>
+            </ul>
+        </nav>
     </header>
 
-    <div id="menu-container"></div> <!-- Conteneur pour le menu -->
-    <div id="weather-info">Chargement des données...</div> <!-- Conteneur pour les données -->
+    <!-- Contenu principal de la page d'accueil -->
+    <main>
+        <h2>Bienvenue sur le site météo du Croisic</h2>
+        <p>Ici, vous trouverez toutes les informations météo locales en temps réel.</p>
+    </main>
 
+    <!-- Pied de page -->
+    <footer>
+        <a href="mentions.html">Mentions légales</a> | 
+        <a href="contact.html">Contact</a>
+    </footer>
 </body>
 </html>
