--- a/webcam.html
+++ b/webcam.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Prévisions - Météo Croisic</title>
+    <title>Webcam - Météo Croisic</title>
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
@@ -21,10 +21,10 @@
         </nav>
     </header>
 
-    <!-- Contenu principal de la page Prévisions -->
+    <!-- Contenu principal de la page Webcam -->
     <main>
-        <h2>Prévisions Météo pour les 5 prochains jours</h2>
-        <p>Les prévisions seront affichées ici.</p>
+        <h2>Webcam en direct</h2>
+        <p>Le flux vidéo de la webcam sera affiché ici.</p>
     </main>
 
     <!-- Pied de page -->
