--- a/previsions.html
+++ b/previsions.html
@@ -5,85 +5,52 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Prévisions - Météo Croisic</title>
     <link rel="stylesheet" href="styles.css">
-    <script>
-        // Fonction pour récupérer les données de l'API et les insérer dans le tableau
-        async function fetchPrecipitations() {
-            const apiUrl = "https://api.openweathermap.org/data/3.0/onecall?units=metric&exclude=daily,alerts&appid=3019a6c49cea102650053a8919b5fa54&lat=47.2917&lon=-2.5201";
-            
-            try {
-                const response = await fetch(apiUrl);
-                const data = await response.json();
-                const minutely = data.minutely;
-
-                let tableBody = document.getElementById('precipitation-data');
-
-                minutely.forEach(item => {
-                    let date = new Date(item.dt * 1000);  // Convertir timestamp en date
-                    let time = date.toLocaleTimeString([], {hour: '2-digit', minute:'2-digit'});  // Extraire l'heure et minutes
-
-                    // Créer une nouvelle ligne
-                    let row = document.createElement('tr');
-
-                    // Insérer l'heure
-                    let timeCell = document.createElement('td');
-                    timeCell.textContent = time;
-                    row.appendChild(timeCell);
-
-                    // Insérer la précipitation
-                    let precipitationCell = document.createElement('td');
-                    precipitationCell.textContent = item.precipitation + " mm";
-                    row.appendChild(precipitationCell);
-
-                    // Ajouter la ligne au tableau
-                    tableBody.appendChild(row);
-                });
-
-            } catch (error) {
-                console.error('Erreur lors de la récupération des données météo:', error);
-            }
-        }
-
-        // Appel de la fonction lorsque la page est chargée
-        window.onload = fetchPrecipitations;
-    </script>
 </head>
 <body>
-    <!-- Bannière avec titre -->
     <header>
         <h1>Météo au Croisic</h1>
-        <!-- Menu de navigation -->
-        <nav>
-            <ul>
-                <li><a href="previsions.html">Prévisions</a></li>
-                <li><a href="station.html">Station météo</a></li>
-                <li><a href="webcam.html">Webcam</a></li>
-                <li><a href="climat.html">Climat Croisic</a></li>
-            </ul>
-        </nav>
     </header>
 
-    <!-- Contenu principal de la page Prévisions -->
+    <nav>
+        <ul>
+            <li><a href="index.html">Accueil</a></li>
+            <li><a href="previsions.html">Prévisions</a></li>
+            <li><a href="station-meteo.html">Station météo</a></li>
+            <li><a href="webcam.html">Webcam</a></li>
+            <li><a href="climat.html">Climat Croisic</a></li>
+        </ul>
+    </nav>
+
+    <!-- Sous-menu pour Prévisions -->
+    <nav class="sub-menu">
+        <ul>
+            <li><a href="#precipitation-1h">Prévisions de pluie à 1h</a></li>
+            <!-- Tu pourras ajouter d'autres sections ici si nécessaire -->
+        </ul>
+    </nav>
+
     <main>
-        <h2>Prévisions des précipitations à venir</h2>
-        <p>Voici un tableau des précipitations à venir pour la prochaine heure, minute par minute :</p>
-        
-        <table border="1">
-            <thead>
-                <tr>
-                    <th>Heure</th>
-                    <th>Précipitation (mm)</th>
-                </tr>
-            </thead>
-            <tbody id="precipitation-data">
-                <!-- Les données de l'API seront insérées ici -->
-            </tbody>
-        </table>
+        <section id="precipitation-1h">
+            <h2>Prévisions de pluie à 1h</h2>
+            <table>
+                <thead>
+                    <tr>
+                        <th>Temps</th>
+                        <th>Précipitations (mm)</th>
+                    </tr>
+                </thead>
+                <tbody id="precipitation-data">
+                    <!-- Les données seront insérées ici par du JavaScript -->
+                </tbody>
+            </table>
+        </section>
     </main>
 
-    <!-- Pied de page -->
     <footer>
-        <a href="mentions.html">Mentions légales</a> | 
+        <a href="mentions-legales.html">Mentions légales</a> | 
         <a href="contact.html">Contact</a>
     </footer>
+
+    <script src="previsions-pluie-1h.js"></script>
 </body>
 </html>
