mutualisation du code menu.html

--- a/menu.html
+++ b/menu.html
@@ -1,6 +1,9 @@
+<!-- menu.html -->
 <nav>
-    <a href="previsions.html">Prévisions</a>
-    <a href="#radar">Radar des pluies</a>
-    <a href="station.html">Station météo</a>
-    <a href="#webcam">Webcam</a>
+    <ul>
+        <li><a href="index.html">Prévisions</a></li>
+        <li><a href="station.html">Station météo</a></li>
+        <li><a href="webcam.html">Webcam</a></li>
+        <li><a href="climat.html">Climat Croisic</a></li>
+    </ul>
 </nav>
