--- a/menu.html
+++ b/menu.html
@@ -1,7 +1,7 @@
 <!-- menu.html -->
 <nav>
     <ul>
-        <li><a href="index.html">Prévisions</a></li>
+        <li><a href="previsions.html">Prévisions</a></li>
         <li><a href="station.html">Station météo</a></li>
         <li><a href="webcam.html">Webcam</a></li>
         <li><a href="climat.html">Climat Croisic</a></li>
