ajout couleurs dégragées tableau précipitations

--- a/previsions.html
+++ b/previsions.html
@@ -20,11 +20,11 @@
             <table>
                 <thead>
                     <tr>
-                        <th>Temps</th>
+                        <th>Heure</th>
                         <th>Précipitations (mm)</th>
                     </tr>
                 </thead>
-                <tbody id="precipitation-data">
+                <tbody id="precipitation-1h">
                     <!-- Les données seront insérées ici par du JavaScript -->
                 </tbody>
             </table>
