ajout couleurs dégragées tableau précipitations

--- a/previsions.html
+++ b/previsions.html
@@ -24,7 +24,7 @@
                         <th>Précipitations (mm)</th>
                     </tr>
                 </thead>
-                <tbody id="precipitation-1h">
+                <tbody id="precipitation-data-1h">
                     <!-- Les données seront insérées ici par du JavaScript -->
                 </tbody>
             </table>
