redirection page d'accueil sur clic bannière

--- a/previsions.html
+++ b/previsions.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <header>
-        <h1>Météo au Croisic</h1>
+        <h1><a href="index.html" style="color: white; text-decoration: none;">Météo au Croisic</a></h1>
     </header>
 
     <!-- Conteneur pour le menu -->
