--- a/previsions.html
+++ b/previsions.html
@@ -7,10 +7,9 @@
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
+    <!-- Bannière avec titre -->
     <header>
-        <h1>
-            <a href="index.html" class="header-link">Météo au Croisic</a>
-        </h1>
+        <h1><a href="index.html" style="color: white; text-decoration: none;">Météo au Croisic</a></h1>
     </header>
 
     <nav id="menu-container"></nav>
