mise à jour graphique précipitations

--- a/previsions.html
+++ b/previsions.html
@@ -16,12 +16,7 @@
 
     <main>
         <div id="precipitation-container">
-            <div class="chart-container">
-                <canvas id="precipitation-chart" width="400" height="400"></canvas>
-            </div>
-            <table id="precipitation-table">
-                <!-- Ton tableau ici -->
-            </table>
+            <canvas id="precipitation-chart"></canvas>
         </div>
     </main>
 
