ajout des sections

--- a/previsions.html
+++ b/previsions.html
@@ -15,7 +15,14 @@
     <nav id="menu-container"></nav>
 
     <main>
-        <canvas id="precipitation-chart"></canvas>
+        <div id =precipitation-one-hour>
+            <h3>Précipitations dans l'heure</h3>
+            <canvas id="precipitation-chart"></canvas>
+        </div>
+
+        <div id =weather-one-day>
+            <h3>Météo pour les prochaines 24h</h3>
+        </div>
     </main>
 
     <footer>
