renommage du script

--- a/previsions.html
+++ b/previsions.html
@@ -42,8 +42,8 @@
         });
     </script>
 
-    <!-- Script pour charger les précipitations à 1h -->
-    <script src="previsions-pluie-1h.js"></script>
+    <!-- Script pour charger les données provenant d'OpenWeather API -->
+    <script src="openweatherapi.js"></script>
 
     <!-- Script pour insérer un graphique -->
     <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
