--- a/previsions.html
+++ b/previsions.html
@@ -22,6 +22,20 @@
 
         <div id =weather-one-day>
             <h3>Météo pour les prochaines 24h</h3>
+            <section id="weather-one-day-tab">
+                <table>
+                    <thead>
+                        <tr>
+                            <th>Heure</th>
+                            <th>Température (°C)</th>
+                            <th>Précipitations (mm)</th>
+                        </tr>
+                    </thead>
+                    <tbody id="weather-data-body">
+                        <!-- Les données seront insérées ici par du JavaScript -->
+                    </tbody>
+                </table>
+            </section>
         </div>
     </main>
 
