--- a/previsions.html
+++ b/previsions.html
@@ -22,7 +22,7 @@
 
         <div>
             <h3>Météo pour les prochaines 24h</h3>
-            <section>
+            <section class="tab-responsive">
                 <table id="weather-data" class="weather-table">
                     <thead>
                         <tr id="hours-row">
