--- a/previsions.html
+++ b/previsions.html
@@ -26,18 +26,18 @@
                 <table id="weather-data" class="weather-table">
                     <thead>
                         <tr id="hours-row">
-                            <!-- Les heures seront insérées ici -->
-                            <th>Paramètre</th>
+                            <th>Paramètres</th>
                         </tr>
                     </thead>
                     <tbody>
                         <tr id="temperature-row">
-                            <!-- Les températures seront insérées ici -->
                             <td>Température (°C)</td>
                         </tr>
-                        <tr id="precipitation-row">
-                            <!-- Les précipitations seront insérées ici -->
+                        <tr id="rain-row">
                             <td>Précipitations (mm)</td>
+                        </tr>
+                        <tr id="wind-row">
+                            <td>Vent (km/h)</td>
                         </tr>
                     </tbody>
                 </table>
