--- a/previsions.html
+++ b/previsions.html
@@ -39,6 +39,9 @@
                         <tr id="wind-row">
                             <td>Vent (km/h)</td>
                         </tr>
+                        <tr id="pressure-row">
+                            <td>Pression (hPa)</td>
+                        </tr>
                     </tbody>
                 </table>
             </section>
