ajout vent rafales

--- a/previsions.html
+++ b/previsions.html
@@ -37,7 +37,10 @@
                             <td>Précipitations (mm)</td>
                         </tr>
                         <tr id="wind-row">
-                            <td>Vent (km/h)</td>
+                            <td>Vent moyen (km/h)</td>
+                        </tr>
+                        <tr id="wind-gust-row">
+                            <td>Vent rafales (km/h)</td>
                         </tr>
                         <tr id="pressure-row">
                             <td>Pression (hPa)</td>
