apparence du tableau 24h

--- a/previsions.html
+++ b/previsions.html
@@ -23,7 +23,7 @@
         <div>
             <h3>Météo pour les prochaines 24h</h3>
             <section class="tab-responsive">
-                <table id="weather-data" class="weather-table">
+                <table class="weather-table">
                     <thead>
                         <tr id="hours-row">
                             <th>Paramètres</th>
