ajout de la date dans le tableau 24h

--- a/previsions.html
+++ b/previsions.html
@@ -25,6 +25,9 @@
             <section class="tab-responsive">
                 <table class="weather-table">
                     <thead>
+                        <tr id="days-row">
+                            <th>Paramètres</th>
+                        </tr>
                         <tr id="hours-row">
                             <th>Paramètres</th>
                         </tr>
