réorga par dossier

--- a/html/index.html
+++ b/html/index.html
@@ -3,8 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Station météo - Météo Croisic</title>
-    <link rel="stylesheet" href="styles.css">
+    <title>Accueil - Météo Croisic</title> <!-- Le nom de la page ici change en fonction de la page -->
+    <link rel="stylesheet" href="css/styles.css">
 </head>
 <body>
     <!-- Bannière avec titre -->
@@ -15,10 +15,10 @@
     <!-- Conteneur pour le menu -->
     <div id="menu-container"></div>
 
-    <!-- Contenu principal de la page Station météo -->
+    <!-- Contenu principal de la page d'accueil -->
     <main>
-        <h2>Données en direct de la Station météo</h2>
-        <p>Les données de la station météo seront affichées ici.</p>
+        <h2>Bienvenue sur le site météo du Croisic</h2>
+        <p>Ici, vous trouverez toutes les informations météo locales en temps réel.</p>
     </main>
 
     <!-- Pied de page -->
