--- a/html/station.html
+++ b/html/station.html
@@ -3,8 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Climat Croisic - Météo Croisic</title>
-    <link rel="stylesheet" href="styles.css">
+    <title>Station météo - Météo Croisic</title>
+    <link rel="stylesheet" href="css/styles.css">
 </head>
 <body>
     <!-- Bannière avec titre -->
@@ -15,11 +15,10 @@
     <!-- Conteneur pour le menu -->
     <div id="menu-container"></div>
 
-    <!-- Contenu principal de la page Climat -->
+    <!-- Contenu principal de la page Station météo -->
     <main>
-        <h2>Climat du Croisic</h2>
-        <p>Des informations sur le climat au Croisic seront affichées ici.</p>
-        <p>Exemples : moyennes des températures, précipitations, vents par mois ou par année.</p>
+        <h2>Données en direct de la Station météo</h2>
+        <p>Les données de la station météo seront affichées ici.</p>
     </main>
 
     <!-- Pied de page -->
