--- a/html/climat.html
+++ b/html/climat.html
@@ -3,8 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Accueil - Météo Croisic</title> <!-- Le nom de la page ici change en fonction de la page -->
-    <link rel="stylesheet" href="styles.css">
+    <title>Climat Croisic - Météo Croisic</title>
+    <link rel="stylesheet" href="css/styles.css">
 </head>
 <body>
     <!-- Bannière avec titre -->
@@ -15,10 +15,11 @@
     <!-- Conteneur pour le menu -->
     <div id="menu-container"></div>
 
-    <!-- Contenu principal de la page d'accueil -->
+    <!-- Contenu principal de la page Climat -->
     <main>
-        <h2>Bienvenue sur le site météo du Croisic</h2>
-        <p>Ici, vous trouverez toutes les informations météo locales en temps réel.</p>
+        <h2>Climat du Croisic</h2>
+        <p>Des informations sur le climat au Croisic seront affichées ici.</p>
+        <p>Exemples : moyennes des températures, précipitations, vents par mois ou par année.</p>
     </main>
 
     <!-- Pied de page -->
