--- a/html/menu.html
+++ b/html/menu.html
@@ -1,9 +1,9 @@
 <!-- menu.html -->
 <nav>
     <ul>
-        <li><a href="previsions.html">Prévisions</a></li>
-        <li><a href="station.html">Station météo</a></li>
-        <li><a href="webcam.html">Webcam</a></li>
-        <li><a href="climat.html">Climat Croisic</a></li>
+        <li><a href="html/previsions.html">Prévisions</a></li>
+        <li><a href="html/station.html">Station météo</a></li>
+        <li><a href="html/webcam.html">Webcam</a></li>
+        <li><a href="html/climat.html">Climat Croisic</a></li>
     </ul>
 </nav>
