--- a/html/previsions.html
+++ b/html/previsions.html
@@ -9,7 +9,7 @@
 <body>
     <!-- Bannière avec titre -->
     <header>
-        <h1><a href="index.html" style="color: white; text-decoration: none;">Météo au Croisic</a></h1>
+        <h1><a href="html/index.html" style="color: white; text-decoration: none;">Météo au Croisic</a></h1>
     </header>
 
     <nav id="menu-container"></nav>
@@ -56,19 +56,10 @@
     </footer>
 
     <!-- Script pour charger le menu -->
-    <script>
-        document.addEventListener('DOMContentLoaded', () => {
-            fetch('menu.html')
-                .then(response => response.text())
-                .then(data => {
-                    document.getElementById('menu-container').innerHTML = data;
-                })
-                .catch(error => console.error('Erreur lors du chargement du menu:', error));
-        });
-    </script>
+    <script src="js/menu.js"></script>
 
     <!-- Script pour charger les données provenant d'OpenWeather API -->
-    <script src="openweatherapi.js"></script>
+    <script src="js/openweatherapi.js"></script>
 
     <!-- Script pour insérer un graphique -->
     <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
